--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 		<title>The AquaOS Project</title>
 	</head>
 	<body>
-		<center><h1>The AquaOS Project</h1></center
+		<center><h1 style="font-family:arial;">The AquaOS Project</h1></center
 	</body>
 </html>
