--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>The AquaOS Project</title>
 	</head>
-	<body>
-		<center><h1 style="font-family:arial;">The AquaOS Project</h1></center
+	<body style="font-family: Serif">
+		<center><h1 style background-color: aqua;>The AquaOS Project</h1></center>
 	</body>
 </html>
