--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 		<title>The AquaOS Project</title>
 	</head>
 	<body style="font-family: Serif">
-		<center><h1 style="background-color: #00ffae;">The AquaOS Project</h1></center>
+		<center><h1>The AquaOS Project</h1></center>
 	</body>
 </html>
